# esp32-display

./: README.md  SPEC.md
device/: .idf_build_vars  CMakeLists.txt  hardware_ref.md  partitions.csv  sdkconfig.defaults
device/components/atanisoft__esp_lcd_ili9488/: PATCH_IDF6.md  esp_lcd_ili9488.c
device/main/: CMakeLists.txt  Kconfig.projbuild  callback.c  callback.h  idf_component.yml  main.c
device/main/hw/: display.c  display.h  lvgl_port.c  lvgl_port.h  touch.c  touch.h
device/main/net/: http_fetch.c  http_fetch.h  wifi.c  wifi.h  ws.c  ws.h
device/main/ui/: placeholder.c  placeholder.h  screen_mgr.c  screen_mgr.h  theme.c  theme.h  widget_factory.c  widget_factory.h  widgets.md
device/main/ui/widgets/: w_bar.c  w_bar.h  w_button.c  w_button.h  w_container.c  w_container.h  w_gauge.c  w_gauge.h  w_graph.c  w_graph.h  w_icon.c  w_icon.h  w_image.c  w_image.h  w_label.c  w_label.h  w_sparkline.c  w_sparkline.h  w_spinner.c  w_spinner.h  w_ticker.c  w_ticker.h  w_toggle.c  w_toggle.h  w_value.c  w_value.h
host/: Cargo.toml  config.toml  config_spec.toml  layout.json  layout1.json  layout2.json  layout_spec.json  theme.json  theme1.json  theme2.json  theme_spec.json
host/src/: artifacts.rs  collector.rs  config.rs  main.rs  preview.rs  server.rs  source.rs  state.rs
