[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.7", features = ["ws"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
sysinfo     = "0.32"
eframe      = "0.29"
egui        = "0.29"
notify      = "6"
tray-icon   = { version = "0.17", default-features = false }
gtk         = { version = "0.18", features = ["v3_24"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
tower-http  = { version = "0.5", features = ["cors"] }
futures     = "0.3"
tokio-tungstenite = "0.21"
