[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.7", features = ["ws"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
sysinfo     = "0.32"
eframe      = "0.29"
egui        = "0.29"
notify      = "6"
tray-icon   = { version = "0.17", default-features = false }
tracing     = "0.1"
tracing-subscriber = "0.3"
tower-http  = { version = "0.5", features = ["cors"] }
futures     = "0.3"
tokio-tungstenite = "0.21"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
nvml-wrapper = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
gtk   = { version = "0.18", features = ["v3_24"] }
winit = { version = "0.30", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Performance",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
]}
