idf_component_register(
    SRCS
        "main.c"
        "callback.c"
        "hw/display.c"
        "hw/touch.c"
        "hw/lvgl_port.c"
        "net/wifi.c"
        "net/http_fetch.c"
        "net/ws.c"
        "ui/theme.c"
        "ui/screen_mgr.c"
        "ui/placeholder.c"
        "ui/widget_factory.c"
        "ui/widgets/w_label.c"
        "ui/widgets/w_button.c"
        "ui/widgets/w_bar.c"
        "ui/widgets/w_graph.c"
        "ui/widgets/w_sparkline.c"
        "ui/widgets/w_gauge.c"
        "ui/widgets/w_spinner.c"
        "ui/widgets/w_icon.c"
        "ui/widgets/w_image.c"
        "ui/widgets/w_container.c"
        "ui/widgets/w_ticker.c"
        "ui/widgets/w_value.c"
        "ui/widgets/w_toggle.c"
    INCLUDE_DIRS ".")
